<?xml version="1.0" encoding="utf-8"?>
<com.pvj.xlibrary.loadinglayout.LoadingLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_contiant_noe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_huise"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/home_titile"></include>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.pvj.xlibrary.banner.BannerIndicator
                    android:id="@+id/indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000" />

                <com.pvj.xlibrary.banner.Banner
                    android:id="@+id/main_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="#fff" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/gonggao"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/icon_new" />

                <TextSwitcher
                    android:id="@+id/textview_auto_roll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:inAnimation="@anim/push_up_in"
                    android:minHeight="40dp"
                    android:outAnimation="@anim/push_up_out"></TextSwitcher>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/go" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/bg_huise" />

            <include layout="@layout/four_bottom" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/newbie" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/newbie"
                    android:textColor="@color/text_newbie"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/bg_huise" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone"

                >

                <TextView
                    android:id="@+id/newtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/home_text_blue"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/maxAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/newtitle"
                    android:layout_below="@+id/newtitle"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="20dp"
                    android:text="@string/home_text_blue"
                    android:textColor="@color/text_huise" />

                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/go"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/img"
                        android:text="@string/quan_go"
                        android:textColor="@color/text_org"
                        android:textSize="@dimen/text_15_size" />

                </RelativeLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/bg_huise"
                android:visibility="gone" />

            <include
                layout="@layout/item_home_money"
                android:visibility="gone">

            </include>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_licai" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/licai"
                    android:textColor="@color/text_newbie"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <include layout="@layout/line_match_parent"></include>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/moremoney"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center"
                android:text="查看更多理财"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_15_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="#fff"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_at" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="@string/interest"
                    android:textColor="@color/text_newbie"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/bg_huise" />

            <!--<include layout="@layout/fragment_commonly" />-->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/atrecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"></android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:gravity="center"
                android:text="查看更多感兴趣"
                android:textColor="@color/text_blue"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_15_size" />
        </LinearLayout>
    </ScrollView>
</com.pvj.xlibrary.loadinglayout.LoadingLayout>